Add basic version for master branch deployments

--- a/tock/tock/templates/base.html
+++ b/tock/tock/templates/base.html
@@ -121,5 +121,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       {% block js %}
       {% endblock js %}
 <div>
+
+<footer>
+  Latest version of Tock: <a href="https://github.com/18f/tock/">{% version %}</a>
+</footer>
   </body>
 </html>
