Add a base version file

--- a/tock/tock/templates/base.html
+++ b/tock/tock/templates/base.html
@@ -123,7 +123,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 <div>
 
 <footer>
-  Latest version of Tock: <a href="https://github.com/18f/tock/">{{ settings.VERSION }}</a>
+  Latest version of Tock: <a href="https://github.com/18f/tock/">{{ VERSION_FILE }}</a>
 </footer>
   </body>
 </html>
